[tool.poetry]
name = "lightning-payencode"
version = "0.1.0"
description = ""
authors = [
    "Rusty Russell <rusty@rustcorp.com.au>",
    "Nikolay Bryskin <nbryskin@gmail.com>",
]
packages = [
    { include = "lnpayencode" },
]
license = 'MIT'

[tool.poetry.dependencies]
python = "^3.10"
base58 = "^2.1.1"
bitstring = "^3.1.9"
secp256k1 = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flakeheaven = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
max_line_length = 130
show_source = true
